[package]
name = "backtest-native-helper"
version = "0.1.0"
authors = ["wanghao <whateverhow@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon_sample"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
neon-serde = "0.1.1"
serde_derive = "1.0.80"
serde = { version = "1.0.80", features = ["derive"] }
serde_json = "1.0"
rayon = "1.2.0"
time = "0.1"